fix button alignments and dropdown style

--- a/packages/formstr-app/src/index.css
+++ b/packages/formstr-app/src/index.css
@@ -28,20 +28,29 @@ code {
     monospace;
 }
 
+.ant-btn{
+  padding: 5.5px 15px;
+}
+
 .ant-btn-primary {
+  padding: 5.5px 15px;
   background-image: radial-gradient(
     rgb(255, 81, 47) 0%,
     rgb(238, 132, 80) 99%,
     rgb(236, 74, 9) 100%
   );
   transition: 0.3s;
+
   &:hover {
     opacity: 70%;
   }
+
   &:disabled {
     background-image: none;
   }
 }
+
+
 .ant-card-head-title {
   text-overflow: unset !important;
   white-space: unset !important;
@@ -60,6 +69,7 @@ code {
 }
 
 .ant-dropdown-menu {
+  width:200px;
   max-height: 250px;
   overflow-y: scroll;
 }
